--- a/webroot/scrolling.html
+++ b/webroot/scrolling.html
@@ -15,23 +15,24 @@
     <div style='margin-left:200px'>
     <div class='slide-deck'>
       <section name="washington-dc">
-      <div class='slide' name='dc-1'>
+      <div class='slide' name='dc-0'>
         <p>
           The Washington D.C. metro area’s deeply entrenched racial segregation reflects the lasting impact of racist housing policies intentionally designed to separate and isolate white and Black residents.
-      </p>
+      </p><p>
+        Racially restrictive covenants, widely adopted in the city of DC in the early 1900s, legally prohibited people of color from buying or occupying homes in many white communities. Restrictive covenants were enforceable by courts until 1948, confining Black residents to certain parts of the city and allowing policymakers to not provide the same resources and investment as neighborhoods where only white residents were allowed to live.<a href="#_ftn10" name="_ftnref10"><sup>[10]</sup></a> Neighborhoods that used restrictive covenants reenforced racial segregation and helped depress Black homeownership rates in those neighborhoods to this day.<a href="#_ftn11" name="_ftnref11"><sup>[11]</sup></a>
+    </p>
       </div>
-      </section>
-
-        <p>
-            Racially restrictive covenants, widely adopted in the city of DC in the early 1900s, legally prohibited people of color from buying or occupying homes in many white communities. Restrictive covenants were enforceable by courts until 1948, confining Black residents to certain parts of the city and allowing policymakers to not provide the same resources and investment as neighborhoods where only white residents were allowed to live.<a href="#_ftn10" name="_ftnref10"><sup>[10]</sup></a> Neighborhoods that used restrictive covenants reenforced racial segregation and helped depress Black homeownership rates in those neighborhoods to this day.<a href="#_ftn11" name="_ftnref11"><sup>[11]</sup></a>
-        </p>
+      <div class="slide" name="dc-1">
+        
         <p>
             Washington D.C.’s public housing complexes were originally racially segregated, with separate developments built for white and Black residents, further contributing to residential segregation.<a href="#_ftn12" name="_ftnref12"><sup>[12]</sup></a> By the time the developments were officially desegregated in the 1950s, much of the city had become highly segregated along intertwined lines of race and economic status, shaped by Jim Crow laws and New Deal-era federal housing policies. Created in the 1930s, the Home Owners’ Loan Corporation (HOLC) provided mortgages to homeowners, guided by maps they color-coded by perceived lending risk. HOLC largely relied on a neighborhood’s racial demographics to determine creditworthiness, deeming communities of color as “hazardous,” a practice known as “redlining” for the red marking these communities in HOLC’s maps.
         </p>
+      </div>
+      <div class="slide" name="dc-12">
         <p>
             While HOLC’s redlining maps institutionalized the idea that proximity to people of color increases lending risk and decreases property values, the GI Bill and the Federal Housing Administration (FHA) cemented racially discriminatory lending practices in the following decades.<a href="#_ftn13" name="_ftnref13"><sup>[13]</sup></a> The GI Bill helped white veterans purchase homes by providing low-interest mortgages but excluded Black veterans from receiving the same benefits. The FHA adopted a discriminatory rating system similar to HOLC that systematically excluded communities of color from the same homeownership opportunities afforded to white communities. The FHA only insured home loans almost exclusively in white communities, helping spur an exodus of white residents to the surrounding suburbs in the DC metro area.<a href="#_ftn14" name="_ftnref14"><sup>[14]</sup></a>
       </p>
-      <section name="washington-dc-2">
+      </div>
       <div class="slide" name="dc-15">
       <p>
           Between 1950 and 1970, over half (60 percent) of the white residents moved out of the city of DC.<a href="#_ftn15" name="_ftnref15"><sup>[15]</sup></a> These changes were also reflected in public housing: Black residents became the overwhelming majority of public housing residents, as it remains today. While Black people currently make up 24 percent of the D.C. metro area’s overall population, 92 percent of households living in D.C.’s public housing are headed by a Black person.<a href="#_ftn16" name="_ftnref16"><sup>[16]</sup></a> Nationally, Black people make up 12 percent of the overall population, while 42 percent of all households living in public housing are headed by a Black person.<a href="#_ftn17" name="_ftnref17"><sup>[17]</sup></a>
@@ -224,6 +225,9 @@
 </p>
 
   <div class='slide-custom-backgrounds'>
+    <div name="dc-map-0" class="fill">
+      <img src="./demo_assets/dc_0.jpg">
+    </div>
     <div name="dc-map-1" class="fill">
       <div class="fill-legend"><img src="./demo_assets/legend_dc_1.PNG" /></div>
       <img src="./demo_assets/dc_1.jpg">
