--- a/webroot/scrolling.html
+++ b/webroot/scrolling.html
@@ -14,7 +14,7 @@
 </p> <img style="width:580px" src="demo_assets/image4.png" />
     <div style='margin-left:200px'>
     <div class='slide-deck'>
-      <section name="washington-dc">
+      <section name="washington-dc" style='padding-bottom:80vh'>
       <div class='slide' name='dc-0'>
         <p>
           The Washington D.C. metro area’s deeply entrenched racial segregation reflects the lasting impact of racist housing policies intentionally designed to separate and isolate white and Black residents.
@@ -27,13 +27,9 @@
         <p>
             Washington D.C.’s public housing complexes were originally racially segregated, with separate developments built for white and Black residents, further contributing to residential segregation.<a href="#_ftn12" name="_ftnref12"><sup>[12]</sup></a> By the time the developments were officially desegregated in the 1950s, much of the city had become highly segregated along intertwined lines of race and economic status, shaped by Jim Crow laws and New Deal-era federal housing policies. Created in the 1930s, the Home Owners’ Loan Corporation (HOLC) provided mortgages to homeowners, guided by maps they color-coded by perceived lending risk. HOLC largely relied on a neighborhood’s racial demographics to determine creditworthiness, deeming communities of color as “hazardous,” a practice known as “redlining” for the red marking these communities in HOLC’s maps.
         </p>
-      </div>
-      <div class="slide" name="dc-12">
         <p>
             While HOLC’s redlining maps institutionalized the idea that proximity to people of color increases lending risk and decreases property values, the GI Bill and the Federal Housing Administration (FHA) cemented racially discriminatory lending practices in the following decades.<a href="#_ftn13" name="_ftnref13"><sup>[13]</sup></a> The GI Bill helped white veterans purchase homes by providing low-interest mortgages but excluded Black veterans from receiving the same benefits. The FHA adopted a discriminatory rating system similar to HOLC that systematically excluded communities of color from the same homeownership opportunities afforded to white communities. The FHA only insured home loans almost exclusively in white communities, helping spur an exodus of white residents to the surrounding suburbs in the DC metro area.<a href="#_ftn14" name="_ftnref14"><sup>[14]</sup></a>
       </p>
-      </div>
-      <div class="slide" name="dc-15">
       <p>
           Between 1950 and 1970, over half (60 percent) of the white residents moved out of the city of DC.<a href="#_ftn15" name="_ftnref15"><sup>[15]</sup></a> These changes were also reflected in public housing: Black residents became the overwhelming majority of public housing residents, as it remains today. While Black people currently make up 24 percent of the D.C. metro area’s overall population, 92 percent of households living in D.C.’s public housing are headed by a Black person.<a href="#_ftn16" name="_ftnref16"><sup>[16]</sup></a> Nationally, Black people make up 12 percent of the overall population, while 42 percent of all households living in public housing are headed by a Black person.<a href="#_ftn17" name="_ftnref17"><sup>[17]</sup></a>
       </p>
@@ -42,43 +38,39 @@
         <p>
           Today, most Black residents in the DC metro area live in low-poverty neighborhoods. However, Black DC renters are impacted by past racist housing policies leading to higher rates of housing insecurity and significant overrepresentation in high-poverty neighborhoods. Households headed by a Black person make up two-thirds (67 percent) of all renter households in high-poverty neighborhoods in the DC metro area, compared to 13 percent of households headed by a white person and households headed by a Latine person.<a href="#_ftn18" name="_ftnref18"><sup>[18]</sup></a>
       </p>
+      <p>
+        Much of the public housing stock in the DC metro area is in these higher poverty neighborhoods, confining many assisted families in areas of concentrated poverty. For example, only 2 percent of people in the DC metro area live in high-poverty neighborhoods yet a third (33 percent) of Black families with children assisted by public housing live in high-poverty neighborhoods. Living in high-poverty neighborhoods can negatively impact access to jobs, transportation costs to work, and access to fresh and reasonably priced food and other basic goods and services.
+    </p>
+    <p>
+        However, the problem isn’t with the public housing program itself. Housing agencies could create housing options in lower poverty neighborhoods and state and local policymakers could invest resources to improve neighborhoods so that living in a high poverty neighborhood doesn’t mean poor schools, lack of resources, and other hardships. Public housing does good for families and individuals with low incomes, helping prevent displacement as housing costs rise and enabling them to continue living in the DC metro area as affordable housing options dwindle in the private market. Many public housing residents also develop a sense of community with other residents, building important social ties they rely on for support and safety.<a href="#_ftn19" name="_ftnref19"><sup>[19]</sup></a> These connections can also serve as a foundation for tenant organizing efforts that help public housing residents hold housing agencies accountable and leverage their lived expertise to improve living conditions.<a href="#_ftn20" name="_ftnref20"><sup>[20]</sup></a>
+    </p>
     </div>
-    </section>
-      <p>
-          Much of the public housing stock in the DC metro area is in these higher poverty neighborhoods, confining many assisted families in areas of concentrated poverty. For example, only 2 percent of people in the DC metro area live in high-poverty neighborhoods yet a third (33 percent) of Black families with children assisted by public housing live in high-poverty neighborhoods. Living in high-poverty neighborhoods can negatively impact access to jobs, transportation costs to work, and access to fresh and reasonably priced food and other basic goods and services.
-      </p>
-      <p>
-          However, the problem isn’t with the public housing program itself. Housing agencies could create housing options in lower poverty neighborhoods and state and local policymakers could invest resources to improve neighborhoods so that living in a high poverty neighborhood doesn’t mean poor schools, lack of resources, and other hardships. Public housing does good for families and individuals with low incomes, helping prevent displacement as housing costs rise and enabling them to continue living in the DC metro area as affordable housing options dwindle in the private market. Many public housing residents also develop a sense of community with other residents, building important social ties they rely on for support and safety.<a href="#_ftn19" name="_ftnref19"><sup>[19]</sup></a> These connections can also serve as a foundation for tenant organizing efforts that help public housing residents hold housing agencies accountable and leverage their lived expertise to improve living conditions.<a href="#_ftn20" name="_ftnref20"><sup>[20]</sup></a>
-      </p>
-      <section name="washington-dc-3">
       <div class='slide' name='dc-3'>
         <p>
           Families and individuals in the DC metro area living in public housing are much more concentrated in higher poverty neighborhoods relative to other rental assistance programs. Some 28 percent of households assisted by public housing live in high-poverty neighborhoods, compared to 13 percent of PBRA-assisted households and 9 percent of voucher-assisted households. (See Fig. X). Public housing residents are also less likely to live in low-poverty neighborhoods relative to PBRA-assisted households and voucher-assisted households in the DC metro area.
       </p>
-      </div>
-      </section>
       <p>
           Most metro areas show a similar concentration of public housing units in high-poverty areas. Public housing residents in two-thirds of the 100 most populous metros are more likely to live in high-poverty neighborhoods compared to voucher and PBRA-assisted households.
       </p>
       <p>
           While it can be difficult for renters with a housing voucher to find a landlord to rent to them, a much higher share are able to rent units in moderate and low-poverty neighborhoods of their choosing. Because public housing is so concentrated in the DC metro area, residents who rely on it do not have the same choice about where they get to live. This is especially significant given the long history of housing policies that have limited where Black and other people of color can live. Given that over 90 percent of households living in D.C.’s public housing are headed by a Black person, this is deeply unjust.
       </p>
-      <section name="washington-dc-4">
+    </div>
       <div class='slide' name='dc-4'>
         <p>
           Despite its shortcomings, public housing remains a critical source of permanently affordable housing, particularly in the Northeast and Puerto Rico. But insufficient funding creates long wait times to secure a unit; a group of residents admitted to D.C. Housing Authority (DCHA) public housing in 2022 spent an average of <em>nearly 16 years </em>on the waiting list before receiving assistance.<a href="#_ftn21" name="_ftnref21"><sup>[21]</sup></a> Nationally, public housing residents waited an average of 20 months before receiving assistance in 2023.<a href="#_ftn22" name="_ftnref22"><sup>[22]</sup></a>
-      </p>
+      </p><p>
+        Demand for public housing far outstrips supply: DCHA’s public housing assists roughly 5,350 households<a href="#_ftn23" name="_ftnref23"><sup>[23]</sup></a>, yet over 24,000 households are still on DCHA’s waiting list for public housing, as of 2023.<a href="#_ftn24" name="_ftnref24"><sup>[24]</sup></a>
+    </p>
+    <p>
+        Despite high demand, a recent HUD report found DCHA has the lowest public housing occupancy rate of any large housing agency, with over 1 in 5 units currently vacant.<a href="#_ftn25" name="_ftnref25"><sup>[25]</sup></a> (See Fig. X). Limited funding and poor management have left many of these vacant units dilapidated due to neglect, in some cases posing significant health and safety hazards.
+    </p>
+    <p>
+        During their inspection of vacant public housing units, HUD found multiple units with mold and moss growing on the walls and floors from active leaks. In 2019, DCHA reported that the vast majority of its units need significant capital improvements, such as new heating and cooling systems, roofs, and plumbing, requiring an estimated $2.2 <em>billion</em> to address.<a href="#_ftn26" name="_ftnref26"><sup>[26]</sup></a>
+    </p>
     </div>
   </section>
-      <p>
-          Demand for public housing far outstrips supply: DCHA’s public housing assists roughly 5,350 households<a href="#_ftn23" name="_ftnref23"><sup>[23]</sup></a>, yet over 24,000 households are still on DCHA’s waiting list for public housing, as of 2023.<a href="#_ftn24" name="_ftnref24"><sup>[24]</sup></a>
-      </p>
-      <p>
-          Despite high demand, a recent HUD report found DCHA has the lowest public housing occupancy rate of any large housing agency, with over 1 in 5 units currently vacant.<a href="#_ftn25" name="_ftnref25"><sup>[25]</sup></a> (See Fig. X). Limited funding and poor management have left many of these vacant units dilapidated due to neglect, in some cases posing significant health and safety hazards.
-      </p>
-      <p>
-          During their inspection of vacant public housing units, HUD found multiple units with mold and moss growing on the walls and floors from active leaks. In 2019, DCHA reported that the vast majority of its units need significant capital improvements, such as new heating and cooling systems, roofs, and plumbing, requiring an estimated $2.2 <em>billion</em> to address.<a href="#_ftn26" name="_ftnref26"><sup>[26]</sup></a>
-      </p>
+      
     <h2>Project-Based Rental Assistance</h2>
     <h3>Los Angeles</h3>
     <p>
@@ -226,6 +218,7 @@
 
   <div class='slide-custom-backgrounds'>
     <div name="dc-map-0" class="fill">
+      <div class="fill-legend"><img src="./demo_assets/legend_dc_0.png" /></div>
       <img src="./demo_assets/dc_0.jpg">
     </div>
     <div name="dc-map-1" class="fill">
