trying a new method of pre-drawing some of these

--- a/webroot/scrolling.html
+++ b/webroot/scrolling.html
@@ -278,6 +278,6 @@
 
   <div style="height:500px"></div>
   <script src="js/app.js" id="script_hous4-16-18"></script>
-  <script src="js/scroll_slides.js"></script>
+  <script src="js/scroll_slides_2.js"></script>
 </body>
 </html>
