back to somewhat functional scrolling

--- a/webroot/scrolling.html
+++ b/webroot/scrolling.html
@@ -266,8 +266,10 @@
 
     </div>
   </div>
+  <div class="cbpp-maps-story-mode">
   <div id="hous4-16-18">
   </div>
+</div>
 
   <div style="height:500px"></div>
   <script src="js/scroll_slides_2.js" id="script_hous4-16-18"></script>
