--- a/webroot/index.html
+++ b/webroot/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
 </head>
 <body>
-  <div style="max-width:1100px">
+  <div style="max-width:1100px;margin:20px">
     <div id="hous4-16-18">
       <p><a href="https://www.cbpp.org/research/policy-basics-federal-rental-assistance">Federal rental assistance</a> enables families to afford decent, stable housing, avoid homelessness and other forms of housing insecurity, and make ends meet. Three major programs &ndash; <a href="https://www.cbpp.org/research/policy-basics-the-housing-choice-voucher-program">Housing Choice Vouchers</a>, <a href="https://www.cbpp.org/research/policy-basics-section-8-project-based-rental-assistance">Section 8 Project-Based Rental Assistance</a>, and <a href="https://www.cbpp.org/research/policy-basics-introduction-to-public-housing">Public Housing</a> &ndash; assist about 84 percent of the households receiving rental assistance. This map allows users to examine where households receiving rental assistance from these three programs live in the 100 most populous metropolitan areas. Neighborhoods are color-coded according to their poverty rate and race/ethnicity population density. For more, read our full report, Where Households Using Federal Rental Assistance Live.</p>
 
