--- a/webroot/scrolling.html
+++ b/webroot/scrolling.html
@@ -57,7 +57,7 @@
 
 
 
-<img style="width:580px" src="demo_assets/image4.png" />
+<img class="demo-figure" src="demo_assets/image4.png" />
   <div class='slide-deck'>
     <section name="washington-dc" style='padding-bottom:80vh'>
       <div class='slide' name='dc-0'>
@@ -113,7 +113,7 @@
 <h2><a name="PBRA">PBRA Largely Helps Asian, NHPI, and Older Angelenos Living Largely in Higher Poverty Areas</a></h2>
 
 <p>The Section 8 Project-Based Rental Assistance Program (PBRA) was established in 1974. Project-based assistance means the rental subsidy is tied to a unit in a building. The tenant will receive assistance as long as they occupy the unit. It is administered by private owners who enter into rental assistance agreements with HUD. Most owners are for-profit entities, but nonprofits and some public housing agencies own a significant share of Section 8 PBRA properties. By the mid-1980s, the program faced criticism for rising costs and concentrating assisted families in neighborhoods with high poverty rates.<sup><a href="#_edn26" name="_ednref26">[26]</a></sup> Although Congress stopped funding new PBRA contracts in 1983, the program still helps house roughly 2 million people in 1.2 million households.<sup><a href="#_edn27" name="_ednref27">[27]</a></sup></p>
-    <img style="width:580px" src="demo_assets/image11.png" />
+    <img class="demo-figure" src="demo_assets/image11.png" />
     <section name="los-angeles">
       <div class='slide' name='la-1'>
         <p>The Section 8 Project-Based Rental Assistance Program (PBRA) was established in 1974. Project-based assistance means the rental subsidy is tied to a unit in a building. The tenant will receive assistance as long as they occupy the unit. It is administered by private owners who enter into rental assistance agreements with HUD. Most owners are for-profit entities, but nonprofits and some public housing agencies own a significant share of Section 8 PBRA properties. By the mid-1980s, the program faced criticism for rising costs and concentrating assisted families in neighborhoods with high poverty rates.<sup><a href="#_edn26" name="_ednref26">[26]</a></sup> Although Congress stopped funding new PBRA contracts in 1983, the program still helps house roughly 2 million people in 1.2 million households.<sup><a href="#_edn27" name="_ednref27">[27]</a></sup></p>
