--- a/node/src/dom.html
+++ b/node/src/dom.html
@@ -62,7 +62,16 @@
 
     </div>
   </div>
-  <div class='legend-container'>
+  <div class="legend-and-notes">
+    <div class='legend-container'>
 
+    </div>
+    <div class="map-notes">
+      <span class='source-line'>Source: CBPP analysis of <span class='notes-datasets'>2020 HUD administrative data, 
+      2017-2021 American Community Survey data, and 2020 Decennial Census data</span>.</span>
+      Icon placements are adjusted using the <a href="https://www.kontur.io/portfolio/population-dataset/">Kontur population density dataset</a>
+      available under the <a href="https://data.humdata.org/faqs/licenses">Creative Commons Attribution International (CC BY) license</a>. 
+      Additional map data from <a href="https://www.openstreetmap.org/">OpenStreetMap</a>. 
+    </div>
   </div>
 </div>
