--- a/webroot/index.html
+++ b/webroot/index.html
@@ -37,6 +37,6 @@
     </div>
   </div>
   <div style="height:500px"></div>
-  <script src="js/app.js" id="script_hous4-16-18"></script>
+  <script src="js/app.js?r=111324_1" id="script_hous4-16-18"></script>
 </body>
 </html>
