--- a/webroot/scrolling.html
+++ b/webroot/scrolling.html
@@ -468,7 +468,7 @@
   </div>
 
   <div style="height:500px"></div>
-  <script src="js/scroll_slides_2.js" id="script_hous4-16-18"></script>
+  <script src="js/scroll_slides_2.js?r=111324_1" id="script_hous4-16-18"></script>
 </article>
 </body>
 </html>
