various fixes and improvements prior to launch

--- a/node/src/dom.html
+++ b/node/src/dom.html
@@ -53,8 +53,8 @@
       </div>
     </div>
     <div class='zoom-buttons'>
-      <button name='zoom-in'><img src='./zoom_in.svg' width="20" height="20" /></button>
-      <button name='zoom-out'><img src='./zoom_out.svg'  width="20" height="20" /></button>
+      <button name='zoom-in'><img src='URL_BASE/zoom_in.svg' width="20" height="20" /></button>
+      <button name='zoom-out'><img src='URL_BASE/zoom_out.svg'  width="20" height="20" /></button>
     </div>
   </div>
   <div class="map-viewport-outer">
